tests/errors/syntax_missing_semicolon.l26
{
    int x
    x = 1;          // error: missing semicolon after declaration
}
